# zeormq

./: CMakeLists.txt  README.md  ipc.cpp  sent_receive_client.cpp  sent_receive_server.cpp
